# vim-doge

./: .editorconfig  .eslintrc.js  .gitattributes  .gitignore  .gitmodules  .npmrc  .prettierrc  .release-it.json  .travis.yml  .version  .vintrc.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  addon-info.json  build.sh  doge.vim  install.bat  install.sh  package-lock.json  package.json  run-tests  test.js  tsconfig.json  webpack.config.js
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  auto_assign.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  doc_standard.md  feature_request.md  language.md  question.md
.github/workflows/: beta-release.yml  ci.yml  release.yml  tests.yml
autoload/: doge.vim
autoload/doge/: buffer.vim  comment.vim  generate.vim  helpers.vim  indent.vim  pattern.vim  python.vim  token.vim  utils.vim
doc/: c-family-doc-standard-examples.md  doge.txt  tags
doc/demos/: README.md  doge-demo-javascript.gif.REMOVED.git-id  (+3 more)
ftplugin/: _coffee.vim  _kotlin.vim  _r.vim  _scala.vim  c.vim  coffee.vim  cpp.vim  cs.vim  groovy.vim  html.vim  java.vim  javascript.vim  jsx.vim  kotlin.vim  lua.vim  php.vim  python.vim  r.vim  ruby.vim  rust.vim  scala.vim  sh.vim  svelte.vim  tsx.vim  typescript.vim
generators/: libclang.py
helper/: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  test.r
helper/src/: base_parser.rs  config.rs  docblock.rs  lib.rs  main.rs  traverse.rs
helper/src/bash/: parser.rs
helper/src/c/: parser.rs
helper/src/c/docs/: doxygen_cpp_comment_slash.yaml  doxygen_cpp_comment_slash_banner.yaml  doxygen_javadoc.yaml  doxygen_qt.yaml  doxygen_qt_no_asterisk.yaml  kernel_doc.yaml
helper/src/cpp/: parser.rs
helper/src/cpp/docs/: doxygen_cpp_comment_exclamation.yaml  doxygen_cpp_comment_slash.yaml  doxygen_cpp_comment_slash_banner.yaml  doxygen_javadoc.yaml  doxygen_javadoc_banner.yaml  doxygen_javadoc_no_asterisk.yaml  doxygen_qt.yaml  doxygen_qt_no_asterisk.yaml
helper/src/csharp/: parser.rs
helper/src/csharp/docs/: xmldoc.yaml
helper/src/html/: parser.rs
helper/src/java/: parser.rs
helper/src/lua/: parser.rs
helper/src/lua/docs/: ldoc.yaml
helper/src/php/: parser.rs
helper/src/php/docs/: phpdoc.yaml
helper/src/python/: parser.rs
helper/src/python/docs/: doxygen.yaml  google.yaml  numpy.yaml  reST.yaml  sphinx.yaml
helper/src/r/: parser.rs
helper/src/r/docs/: roxygen2.yaml
helper/src/ruby/docs/: YARD.yaml
helper/src/rust/: parser.rs
helper/src/scala/: parser.rs
helper/src/scala/docs/: scaladoc.yaml
helper/src/svelte/: parser.rs
helper/src/typescript/: parser.rs
helper/src/typescript/docs/: jsdoc.yaml
parsers/: php.js  typescript.js
playground/: README.md  test.c  test.coffee  test.cpp  test.cs  test.java  test.js  test.kt  test.lua  test.php  test.py  test.r  test.rb  test.scala  test.sh
plugin/: doge.vim
scripts/: build.ps1  build.sh  install  install.ps1  install.sh  release.sh  run-vader-tests  run-vader-tests.sh  run-vint  run-vint.sh
src/: constants.ts  helpers.ts  index.ts  parser-languages.ts  parser-service.interface.ts  vim-doge.d.ts
test/: autocmd-filetype.vader  commands.vader  example.vader  undo-cursor-pos.vader  vimrc
tests/: test.js  test.php
(+160 files in other folders)
