[package]
name = "vim-doge-helper"
version = "4.0.0"
edition = "2021"
publish = false
include = ["src"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
tera = { version = "1", default-features = false }
regex = "1.8.4"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.99"
serde_yaml = "0.9.22"
tree-sitter = "0.20.10"
tree-sitter-php = { git = "https://github.com/tree-sitter/tree-sitter-php" }
tree-sitter-bash = { git = "https://github.com/tree-sitter/tree-sitter-bash" }
tree-sitter-lua = { git = "https://github.com/Azganoth/tree-sitter-lua" }
tree-sitter-ruby = { git = "https://github.com/tree-sitter/tree-sitter-ruby" }
tree-sitter-rust = { git = "https://github.com/tree-sitter/tree-sitter-rust" }
tree-sitter-c-sharp = { git = "https://github.com/tree-sitter/tree-sitter-c-sharp" }
tree-sitter-java = { git = "https://github.com/tree-sitter/tree-sitter-java" }
tree-sitter-python = { git = "https://github.com/tree-sitter/tree-sitter-python" }
tree-sitter-c = { git = "https://github.com/tree-sitter/tree-sitter-c" }
tree-sitter-cpp = { git = "https://github.com/tree-sitter/tree-sitter-cpp" }
tree-sitter-typescript = { git = "https://github.com/tree-sitter/tree-sitter-typescript" }
