[package]
name = "vim-doge-helper"
version = "4.5.0"
edition = "2021"
publish = false
include = ["src"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
tera = { version = "1", default-features = false }
regex = "1.8.4"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.99"
serde_yaml = "0.9.22"
tree-sitter = "0.20.10"
tree-sitter-bash = { git = "https://github.com/tree-sitter/tree-sitter-bash", rev = "1b0321e" }
tree-sitter-lua = { git = "https://github.com/Azganoth/tree-sitter-lua", rev = "e198b76" }
tree-sitter-ruby = { git = "https://github.com/tree-sitter/tree-sitter-ruby", rev = "f257f3f" }
tree-sitter-rust = { git = "https://github.com/tree-sitter/tree-sitter-rust", rev = "0a70e15" }
tree-sitter-c-sharp = { git = "https://github.com/tree-sitter/tree-sitter-c-sharp", rev = "1648e21" }
tree-sitter-java = { git = "https://github.com/tree-sitter/tree-sitter-java", rev = "c194ee5" }
tree-sitter-python = { git = "https://github.com/tree-sitter/tree-sitter-python", rev = "36f9e33" }
tree-sitter-c = { git = "https://github.com/tree-sitter/tree-sitter-c", rev = "84bdf40" }
tree-sitter-cpp = { git = "https://github.com/tree-sitter/tree-sitter-cpp", rev = "0e7b7a0" }
tree-sitter-typescript = { git = "https://github.com/tree-sitter/tree-sitter-typescript", rev = "3429d8c" }
tree-sitter-php = { git = "https://github.com/tree-sitter/tree-sitter-php", rev = "d43130f" }
tree-sitter-r = { git = "https://github.com/r-lib/tree-sitter-r", rev = "c55f8b4" }
tree-sitter-scala = { git = "https://github.com/tree-sitter/tree-sitter-scala", rev = "f14629b" }
tree-sitter-html = { git = "https://github.com/tree-sitter/tree-sitter-html", rev = "d742025" }
